<resources>
    <string name="app_name">Interest Calculator</string>
    <string name="principal_amount">Principal Amount :</string>
    <string name="interest_rate">Interest Rate :</string>
    <string name="time_period">Time Period :</string>
    <string name="calculat_btn">Calculate </string>
    <string name="interest_amount">Interest Amount :</string>
    <string name="total_amount">Total Amount : </string>
    <string name="principal_amountet">put amount</string>
    <string name="interest_rateet">put percentage</string>
    <string name="time_periodet">put year</string>
    <string name="interest_amounttv">show amount</string>
    <string name="total_amountet">show amount</string>


</resources>
