<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorCornsilk"
    tools:context="com.nahid_islam.interestcalculator.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSmalt"
        android:layout_marginTop="@dimen/layout_vertical_margin">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/principal_amount"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/principalAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/principal_amountet"
            android:textColorHint="@color/colorWhite"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:inputType="numberDecimal" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSmalt"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/interest_rate"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/interestRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/interest_rateet"
            android:textColorHint="@color/colorWhite"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:inputType="numberDecimal" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSmalt"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_period"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/timePeriod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/time_periodet"
            android:textColorHint="@color/colorWhite"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:inputType="numberDecimal" />


    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/calculat_btn"
        android:onClick="btnCalculate"

        android:textColor="@color/colorBlack"
        android:layout_gravity="center_horizontal"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlueGreen"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/interest_amount"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/interestAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/interest_amounttv"
            android:textColorHint="@color/colorBlack"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:inputType="numberDecimal" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlueGreen"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_amount"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/totalAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/total_amountet"
            android:textColorHint="@color/colorBlack"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:inputType="numberDecimal" />


    </LinearLayout>

</LinearLayout>
